# arbstr

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  FAQ.md  LICENSE  README.md  config.example.toml  docker-compose.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v1.1-MILESTONE-AUDIT.md  v1.7-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1-MILESTONE-AUDIT.md  v1-REQUIREMENTS.md  v1-ROADMAP.md  v1.1-REQUIREMENTS.md  v1.2-REQUIREMENTS.md  v1.3-REQUIREMENTS.md  v1.3-ROADMAP.md  v1.4-REQUIREMENTS.md  v1.4-ROADMAP.md  v1.7-REQUIREMENTS.md  v1.7-ROADMAP.md  v2.0-REQUIREMENTS.md  v2.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: CNAME  index.html  style.css
migrations/: 20260203000000_initial_schema.sql  20260216000000_add_stream_duration.sql  20260302000000_add_indexes.sql  20260302000001_drop_token_ratios.sql  20260402000000_pending_settlements.sql  20260409000000_add_complexity_columns.sql
src/: config.rs  error.rs  lib.rs  main.rs
src/proxy/: circuit_breaker.rs  discovery.rs  handlers.rs  logs.rs  mod.rs  retry.rs  server.rs  stats.rs  stream.rs  types.rs  validation.rs  vault.rs
src/router/: mod.rs  (+2 more)
tests/: circuit_integration.rs  cost.rs  discovery.rs  env_expansion.rs  escalation.rs  health.rs  logs.rs  stats.rs  stream_options.rs  vault_billing.rs  vault_fault_tolerance.rs
(+190 files in other folders)
